Continued Working on this...

--- a/python-review.ipynb
+++ b/python-review.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "3+3"
+    "3 + 3"
    ]
   },
   {
@@ -42,10 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eb2bb97d-34ae-4bde-b5b9-72a67920f022",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(5 - 1) * ((7 + 1) / (3 - 1))"
    ]
@@ -61,12 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8a8d0399-ae80-4a30-8fd7-d09ea9d47fec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "5 +"
+    "5 + 2"
    ]
   },
   {
@@ -81,11 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ac61e215-338b-409a-9fcf-c189d5eb1ee3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'James - GIS 3011 - 4'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"James\"\n",
+    "course = \"GIS 3011\"\n",
+    "age = 4\n",
+    "f\"{name} - {course} - {age}\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,11 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "07d49e90-2e6b-4c95-9c07-e5a509cd28c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spam is not good, so try eggs and bacon instead!\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = \"Spam is not good, so\"\n",
+    "\n",
+    "eggs = \"try eggs and\"\n",
+    "\n",
+    "bacon = \"bacon instead!\"\n",
+    "\n",
+    "print(f\"{spam} {eggs} {bacon}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,7 +176,11 @@
    "id": "12a6fa83-11a5-478c-83df-bd2439b9a3af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spam = 2 + 2\n",
+    "print(spam)\n",
+    "print(f\"spam + 5 is: {spam + 5}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,11 +195,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "33b7656c-26bb-4e49-b2ea-6adbf6e4de85",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " eel\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello eel!\n",
+      "Your name lenght is: 3\n",
+      "What is your age?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You will be 2 in one year!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "This program is going to:\n",
+    "\n",
+    "    * Ask for a user’s name.\n",
+    "    * Then greet them.\n",
+    "    * Other things too.\n",
+    "\"\"\"\n",
+    "# Ask for the user's name\n",
+    "print(\"What is your name?\")\n",
+    "user_name = input()\n",
+    "\n",
+    "# Now greet them\n",
+    "print(f\"Hello {user_name}!\")\n",
+    "\n",
+    "# Tell them their name lenght\n",
+    "print(f\"Your name lenght is: {len(user_name)}\")\n",
+    "\n",
+    "# Ask their age\n",
+    "print(\"What is your age?\")\n",
+    "\n",
+    "user_age = input()\n",
+    "\n",
+    "print(f\"You will be {int(user_age) + 1} in one year!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,11 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4f0cdd0c-4d65-4227-b300-ee5da00ec514",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "42 == 42\n",
+    "\n",
+    "42 != \"hello\"\n",
+    "\n",
+    "age1 = 33\n",
+    "\n",
+    "age2 = 34\n",
+    "\n",
+    "age1 == spam"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,11 +312,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aedcb54e-3e9b-4ed9-bdad-9e255395263c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAge = 33\n",
+    "myPet = \"cat\"\n",
+    "myAge > 20 and myPet == \"dog\"\n",
+    "myAge > 20 and myPet == \"cat\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,11 +346,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b7033ea4-1248-41aa-912b-d890f0bb00ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name? eeek\n",
+      "What is your age? 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are not Alice, kiddo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('What is your name?')\n",
+    "age = int(input('What is your age?'))\n",
+    "if name == \"Alice\":\n",
+    "    print(\"Hi, Alice.\")\n",
+    "elif age < 12:\n",
+    "    print(\"You are not Alice, kiddo.\")\n",
+    "elif age > 2000:\n",
+    "    print(\"Unlike you, Alice is not an undead, immortal vampire.\")\n",
+    "elif age > 100:\n",
+    "    print(\"You are not Alice, grannie.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,11 +390,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a21d9359-d9ef-416f-a123-d8c33eb93dc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = 0\n",
+    "while spam < 5:\n",
+    "    print('hi')\n",
+    "    spam = spam + 1"
+   ]
   },
   {
    "cell_type": "code",
@@ -284,15 +485,15 @@
    "outputs": [],
    "source": [
     "while True:\n",
-    "     print('Who are you?')\n",
-    "     name = input()\n",
-    "     if name != 'Joe':\n",
+    "    print(\"Who are you?\")\n",
+    "    name = input()\n",
+    "    if name != \"Joe\":\n",
     "        continue\n",
-    "     print('Hello Joe. What is the password? (Hint: It’s a fish.)')\n",
-    "     password = input()\n",
-    "     if password == 'swordfish':\n",
-    "          break\n",
-    "print('Access Granted for ' + name)"
+    "    print(\"Hello Joe. What is the password? (Hint: It’s a fish.)\")\n",
+    "    password = input()\n",
+    "    if password == \"swordfish\":\n",
+    "        break\n",
+    "print(\"Access Granted for \" + name)"
    ]
   },
   {
@@ -306,11 +507,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c1f1b2e2-f69f-410e-b09e-0e8233a780c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print('hi')"
+   ]
   },
   {
    "cell_type": "code",
@@ -331,11 +547,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "53c18437-1846-4ad2-8f88-9af4f385ed20",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type 'leave' to exit.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " leave\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "while True:\n",
+    "    print(\"Type 'leave' to exit.\")\n",
+    "    response = input()\n",
+    "    if response == 'leave':\n",
+    "        sys.exit()\n",
+    "    print(f'You typed {response}.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,6 +603,8 @@
    "source": [
     "def spam():\n",
     "    eggs = 42\n",
+    "\n",
+    "\n",
     "spam()\n",
     "print(eggs)"
    ]
@@ -369,9 +620,13 @@
     "    eggs = 99\n",
     "    bacon()\n",
     "    print(eggs)\n",
+    "\n",
+    "\n",
     "def bacon():\n",
-    "    ham =101\n",
+    "    ham = 101\n",
     "    eggs = 0\n",
+    "\n",
+    "\n",
     "spam()"
    ]
   },
@@ -383,7 +638,9 @@
    "outputs": [],
    "source": [
     "def spam():\n",
-    "   print(eggs)\n",
+    "    print(eggs)\n",
+    "\n",
+    "\n",
     "eggs = 42\n",
     "spam()\n",
     "print(eggs)"
@@ -397,18 +654,20 @@
    "outputs": [],
    "source": [
     "def spam():\n",
-    "    eggs = 'over easy'\n",
-    "    print(eggs)    # prints 'over easy'\n",
+    "    eggs = \"over easy\"\n",
+    "    print(eggs)  # prints 'over easy'\n",
+    "\n",
     "\n",
     "def bacon():\n",
-    "    eggs = 'hard boiled'\n",
-    "    print(eggs)    # prints 'head boiled'\n",
+    "    eggs = \"hard boiled\"\n",
+    "    print(eggs)  # prints 'head boiled'\n",
     "    spam()\n",
-    "    print(eggs)    # prints 'hard boiled'\n",
+    "    print(eggs)  # prints 'hard boiled'\n",
     "\n",
-    "eggs = 'poached'\n",
+    "\n",
+    "eggs = \"poached\"\n",
     "bacon()\n",
-    "print(eggs)        # prints 'poached'"
+    "print(eggs)  # prints 'poached'"
    ]
   },
   {
@@ -420,7 +679,9 @@
    "source": [
     "def spam():\n",
     "    global eggs\n",
-    "    eggs = 'over easy'\n",
+    "    eggs = \"over easy\"\n",
+    "\n",
+    "\n",
     "eggs = \"hard boiled\"\n",
     "spam()\n",
     "print(eggs)"
@@ -434,10 +695,11 @@
    "outputs": [],
    "source": [
     "def spam():\n",
-    "   print(eggs) #ERROR\n",
-    "   eggs = 'poached local'\n",
+    "    print(eggs)  # ERROR\n",
+    "    eggs = \"poached local\"\n",
     "\n",
-    "Eggs = 'hard boiled'\n",
+    "\n",
+    "Eggs = \"hard boiled\"\n",
     "spam()"
    ]
   },
@@ -483,13 +745,15 @@
    "source": [
     "def spam(divideBy):\n",
     "    return 42 / divideBy\n",
+    "\n",
+    "\n",
     "try:\n",
     "    print(spam(2))\n",
     "    print(spam(12))\n",
     "    print(spam(0))\n",
     "    print(spam(1))\n",
     "except ZeroDivisionError:\n",
-    "    print('Error: Invalid argument.')"
+    "    print(\"Error: Invalid argument.\")"
    ]
   },
   {
@@ -507,7 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spam = ['cat', 'bat', 'rat', 'elephant']"
+    "spam = [\"cat\", \"bat\", \"rat\", \"elephant\"]"
    ]
   },
   {
@@ -525,12 +789,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catName1 = 'Zophie'\n",
-    "catName2 = 'Pooka'\n",
-    "catName3 = 'Simon'\n",
-    "catName4 = 'Lady Macbeth'\n",
-    "catName5 = 'Fat-tail'\n",
-    "catName6 = 'Miss Cleo'"
+    "catName1 = \"Zophie\"\n",
+    "catName2 = \"Pooka\"\n",
+    "catName3 = \"Simon\"\n",
+    "catName4 = \"Lady Macbeth\"\n",
+    "catName5 = \"Fat-tail\"\n",
+    "catName6 = \"Miss Cleo\""
    ]
   },
   {
@@ -540,21 +804,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Enter the name of cat 1:')\n",
+    "print(\"Enter the name of cat 1:\")\n",
     "catName1 = input()\n",
-    "print('Enter the name of cat 2:')\n",
+    "print(\"Enter the name of cat 2:\")\n",
     "catName2 = input()\n",
-    "print('Enter the name of cat 3:')\n",
+    "print(\"Enter the name of cat 3:\")\n",
     "catName3 = input()\n",
-    "print('Enter the name of cat 4:')\n",
+    "print(\"Enter the name of cat 4:\")\n",
     "catName4 = input()\n",
-    "print('Enter the name of cat 5:')\n",
+    "print(\"Enter the name of cat 5:\")\n",
     "catName5 = input()\n",
-    "print('Enter the name of cat 6:')\n",
+    "print(\"Enter the name of cat 6:\")\n",
     "catName6 = input()\n",
-    "print('The cat names are:')\n",
-    "print(catName1 + ' ' + catName2 + ' ' + catName3 + ' ' + catName4 + ' ' +\n",
-    "catName5 + ' ' + catName6)"
+    "print(\"The cat names are:\")\n",
+    "print(\n",
+    "    catName1\n",
+    "    + \" \"\n",
+    "    + catName2\n",
+    "    + \" \"\n",
+    "    + catName3\n",
+    "    + \" \"\n",
+    "    + catName4\n",
+    "    + \" \"\n",
+    "    + catName5\n",
+    "    + \" \"\n",
+    "    + catName6\n",
+    ")"
    ]
   },
   {
@@ -566,14 +841,18 @@
    "source": [
     "catNames = []\n",
     "while True:\n",
-    "    print('Enter the name of cat ' + str(len(catNames) + 1) + ' (Or enter nothing to stop.):')\n",
+    "    print(\n",
+    "        \"Enter the name of cat \"\n",
+    "        + str(len(catNames) + 1)\n",
+    "        + \" (Or enter nothing to stop.):\"\n",
+    "    )\n",
     "    name = input()\n",
-    "    if name == '':\n",
+    "    if name == \"\":\n",
     "        break\n",
-    "    catNames = catNames + [name] # list concatenation\n",
-    "print('The cat names are:')\n",
+    "    catNames = catNames + [name]  # list concatenation\n",
+    "print(\"The cat names are:\")\n",
     "for name in catNames:\n",
-    "    print(' ' + name)"
+    "    print(\" \" + name)"
    ]
   },
   {
@@ -629,9 +908,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "supplies = ['pens', 'staplers', 'flamethrowers', 'binders']\n",
+    "supplies = [\"pens\", \"staplers\", \"flamethrowers\", \"binders\"]\n",
     "for i in range(len(supplies)):\n",
-    "    print('Index ' + str(i) + ' in supplies is: ' + supplies[i])"
+    "    print(\"Index \" + str(i) + \" in supplies is: \" + supplies[i])"
    ]
   },
   {
@@ -671,13 +950,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myPets = ['Zophie', 'Pooka', 'Fat-tail']\n",
-    "print('Enter a pet name:')\n",
+    "myPets = [\"Zophie\", \"Pooka\", \"Fat-tail\"]\n",
+    "print(\"Enter a pet name:\")\n",
     "name = input()\n",
     "if name not in myPets:\n",
-    "    print('I do not have a pet named ' + name)\n",
+    "    print(\"I do not have a pet named \" + name)\n",
     "else:\n",
-    "    print(name + ' is my pet.')"
+    "    print(name + \" is my pet.\")"
    ]
   },
   {
@@ -697,6 +976,7 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
     "pets = ['Dog', 'Cat', 'Moose’]\n",
     "random.choice(pets)"
    ]
@@ -710,7 +990,7 @@
    "source": [
     "people = ['Alice', 'Bob', 'Carol', 'David’]\n",
     "random.shuffle(people) \n",
-    "people\n"
+    "people"
    ]
   },
   {
